패키지 이동에 따른 package 정보 수정